force-app/main/default/objects/SITAD_Integration_Details__c/SITAD_Integration_Details__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SITAD Integration Details</label>
</CustomObject>