force-app/main/default/objects/SITAD_Integration_Details__c/fields/Authorization_Head__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Head__c</fullName>
    <label>Authorization Head</label>
    <length>255</length>
    <type>Text</type>
</CustomField>