force-app/main/default/objects/SITAD_Integration_Details__c/fields/caseObj_Endoint__c.field-meta.xml
<CustomField>
    <fullName>caseObj_Endoint__c</fullName>
    <label>caseObj Endoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>