force-app/main/default/objects/SITAD_Integration_Details__c/fields/CustomerAcc_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>CustomerAcc_Endpoint__c</fullName>
    <label>CustomerAcc Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>