force-app/main/default/objects/SITAD_Integration_Details__c/fields/Token_endpoint__c.field-meta.xml
<CustomField>
    <fullName>Token_endpoint__c</fullName>
    <label>Token endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>